                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 11-02-2006 added: my files, settings, xlink kai to startup window settings to match xboxmediacenter.xml
 - 10-02-2006 fixed: dvdnav discontinuites wheren't being logged correctly
 - 10-02-2006 fixed: potential bug in sharedsection handling
 - 10-02-2006 fixed: music nav, the error message for a empty database was not shown
 - 10-02-2006 fixed: setting the startup window to music or video starts xmbc in the correct window
 - 09-02-2006 added: display a/v sync in codecinfo during playback in dvdplayer + some new code to prepare for a new syncing system.
 - 09-02-2006 fixed: some dvd's would stutter way more than before after the THX fix (not the major stutter issue). buffers are now only played out if timestamp wraps backwords
 - 09-02-2006 added: IP Address button from the normal virtual keyboard to link to the IP address input dialog.
 - 09-02-2006 changed: Controls that are initially hidden will not be animated using WindowOpen.
 - 09-02-2006 fixed: Some ID3 tags that used multiple strings per tag were using the last string (often empty).  Now we just use the first non-empty string.
 - 09-02-2006 changed: PlayerControls.xml closes due to skin condition rather than code conditions.
 - 09-02-2006 fixed: Start wouldn't close OSD Audio Settings.  Keymap.xml entry added.
 - 08-02-2006 added: display cpu usage for audio/video/player thread in dvdplayer.
 - 08-02-2006 fixed: Includes messed up the order in the xml file.
 - 08-02-2006 fixed: Audio/Subtitle settings dialog was not working correctly.
 - 08-02-2006 changed: <id> is only read for custom windows.